# tester

./: 1.conf  CMakeLists.txt  README.md  allp.c  cmake.sh  cmake.txt  cycle.c  czasowykalkulator  czasowykalkulator2  factorial.c  latex.sh  main.c  next.c  order.c  parity.c  previous.c  rzad.c  square.c  start.sh  test1.conf  test1.sh  tester.sh  time  time.sh  twoline.c
czas/: czas  przyklad_uruchomienia
