cmake_minimum_required(VERSION 3.16)
project(permutations)

add_executable(main main.c)
add_executable(twoline twoline.c)
add_executable(cycle cycle.c)
add_executable(next next.c)
add_executable(order order.c)
add_executable(parity parity.c)
add_executable(previous previous.c)
add_executable(square square.c)
add_executable(factorial factorial.c)
add_executable(allp allp.c)
target_link_libraries(factorial m)
target_link_libraries(allp m)
target_link_libraries(main m)
target_link_libraries(cycle m)
target_link_libraries(twoline m)
target_link_libraries(next m)
target_link_libraries(order m)
target_link_libraries(previous m)
target_link_libraries(square m)
target_link_libraries(parity m)
